// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FAB large size 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 28,
        "height": 96,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 96,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 28,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 96,
                "width": 96,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 36,
              },
              [
                {
                  "lineHeight": 36,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 33,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB medium size 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 20,
        "height": 80,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 80,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 80,
                "width": 80,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 28,
              },
              [
                {
                  "lineHeight": 28,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 25,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB transitioning to not visible 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 0,
        "transform": [
          {
            "scale": 0,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "none",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB transitioning to visible 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with accessibilityLabel 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Add item"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with containerColor and contentColor overrides 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "#ff5722",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "#ff5722",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with containerColor override 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "#ff5722",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "#ff5722",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 27, 32, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with default props 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(234, 221, 255, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with primary variant 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with secondary variant 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(98, 91, 113, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with tertiary variant 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(125, 82, 96, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(125, 82, 96, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with tonalSecondary variant 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 25, 43, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders FAB with tonalTertiary variant 1`] = `
<View
  style={
    [
      undefined,
      {
        "transformOrigin": "center",
      },
      {
        "backgroundColor": "rgba(255, 216, 228, 1)",
        "borderRadius": 16,
        "height": 56,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 56,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
      {
        "pointerEvents": "auto",
      },
    ]
  }
  testID="floating-action-button-container"
>
  <View
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": "rgba(255, 216, 228, 1)",
          "borderRadius": 16,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            null,
            null,
          ],
        ]
      }
      testID="floating-action-button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "none",
            },
            [
              {
                "justifyContent": "center",
              },
              {
                "height": 56,
                "width": 56,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(49, 17, 29, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          plus
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 21,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;
